--- a/index-normal.html
+++ b/index-normal.html
@@ -1515,7 +1515,7 @@
 
 
 <!-- FOR TOGGLE -->
-<div id="color-palate" class="popout card">
+<!--<div id="color-palate" class="popout card">
     <div id="color-toggle" class="toggle text-center"><i class="fa fa-cog fa-spin"></i></div>
     <div class="colors text-center">
         <p class="text-center">Pick a Color</p>
@@ -1536,7 +1536,7 @@
             <li id="dark_gray" class="color10"></li>
         </ul>
     </div>
-</div>
+</div>-->
 
 
 <!--==========================================
